// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the card with no props 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Card Image"
      class="card__image"
    />
    <p
      class="card__date"
    />
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      />
      <img
        alt="Arrow Icon"
        class="card__icon"
        src="arrow-upper-right-black.svg"
      />
    </div>
    <p
      class="card__info"
    />
    <ul
      class="card__links"
    />
  </div>
</div>
`;

exports[`Should render the card with props 1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Card Image"
      class="card__image"
      src="../../assets/for-hire-image.svg"
    />
    <p
      class="card__date"
    >
      18:25
    </p>
    <div
      class="card__header"
    >
      <h2
        class="card__title"
      >
        Card
      </h2>
      <img
        alt="Arrow Icon"
        class="card__icon"
        src="arrow-upper-right-black.svg"
      />
    </div>
    <p
      class="card__info"
    >
      lorem ipsum
    </p>
    <ul
      class="card__links"
    >
      <li
        class="card__link card__link--purple"
      >
        one
      </li>
      <li
        class="card__link card__link--darkpurple"
      >
        two
      </li>
      <li
        class="card__link card__link--purple"
      >
        three
      </li>
    </ul>
  </div>
</div>
`;
